Frontend services. Card - save button with both photo.